Navbar now responsive. Not managed to stop it from collapsing.

--- a/www/css/css/style.css
+++ b/www/css/css/style.css
@@ -277,12 +277,19 @@ header {
   content: "\f0d7";
   color: green;
 }
+@media (min-width: 992px) {
+  .myloginform,
+  .myloggedinform {
+    width: 300px;
+    left: 50% !important;
+    right: auto !important;
+    transform: translate(-50%, 0) !important;
+  }
+}
 .myloginform,
 .myloggedinform {
-  width: 300px;
-  left: 50% !important;
-  right: auto !important;
-  transform: translate(-50%, 0) !important;
+  max-width: 500px;
+  margin: 0 auto;
 }
 .myloginform h3,
 .myloggedinform h3,
